[tool.poetry]
name = "joe-feed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "joe_feed"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
feedparser = "6.0.10"
requests = "^2.31.0"
datetime = "^5.1"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
