[package]
name = "feed_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
opml = "1.0" # 用于解析和生成 OPML 文件
sqlx = { version = "0.8.0", features = [
    "sqlite",
    "runtime-tokio-native-tls",
] } #
feed-rs = "2.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
chrono = "0.4.38"
regex = "1"
